--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MAC Újbuda következő hazai meccse</title>
   </head>
   <body style="width: 100%;height: 100%;
 background-color: rgba(0, 0, 0, 0);
